--- a/styles/App.scss
+++ b/styles/App.scss
@@ -12,3 +12,5 @@
 @import"./sections/features";
 @import"./sections/ideas";
 @import"./sections/products";
+@import"./sections/about";
+@import"./sections/contact";
