--- a/styles/config/_mixins.scss
+++ b/styles/config/_mixins.scss
@@ -1,7 +1,29 @@
+@mixin laptop {
+    @media (max-width: 1200px) {
+        @content;
+    }
+}
+
+@mixin tablet {
+    @media (max-width: 992px) {
+        @content;
+    }
+}
+
+@mixin mobile {
+    @media (max-width: 640px) {
+        @content;
+    }
+}
+
 .container {
     width: 95%;
     max-width: 1420px;
     margin: 0 auto;
+
+    @include tablet {
+        width: 100%;
+    }
 }
 
 * {
@@ -11,6 +33,14 @@
     font-family: poppi;
     color: $text_color;
     font-size: 18px;
+
+    @include laptop {
+        font-size: 13px;
+    }
+
+    @include mobile {
+        font-size: 12px;
+    }
 }
 
 @mixin flex($justify: space-between, $aligin: center, $direction: row) {
@@ -18,22 +48,4 @@
     justify-content: $justify;
     align-items: $aligin;
     flex-direction: $direction;
-}
-
-@mixin tablet {
-    @media (max-width:1000px) {
-        @content;
-    }
-}
-
-@mixin laptop {
-    @media (max-width:992px) {
-        @content;
-    }
-}
-
-@mixin mobile {
-    @media (max-width:640px) {
-        @content;
-    }
 }
