--- a/styles/sections/_features.scss
+++ b/styles/sections/_features.scss
@@ -1,19 +1,50 @@
 #features {
   margin-bottom: 230px;
 
-  .carts {
-    @include flex();
-    flex-wrap: wrap;
-    margin-bottom: 200px;
+  @include laptop{
+    margin-bottom: 120px;
+  }
 
+  @include tablet{
+    width: 90%;
+    margin: 0 auto;
+  }
+
+  .title{
+    @include tablet{
+      display: none
+    }
+  }
+
+  .carts {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
+
+    @include tablet{
+      grid-template-columns: 1fr 1fr;
+      margin-bottom: 100px;
+    }
+    
     .cart {
-      width: 24.5%;
       padding: 16px 20px 20px;
       border-radius: 10px;
       background: rgba(255, 255, 255, 0.20);
       border: 1px solid white;
       transition: all .4s;
 
+      @include mobile{
+        margin: 0 auto 20px;
+        padding-right: 16px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+        &:active{
+          border: 1px solid #FADCD9;
+          box-shadow: 4px 2px 10px 2px rgba(247, 148, 137, 0.20);
+        }
+      }
+      
       &:hover {
         border: 1px solid #FADCD9;
         box-shadow: 4px 2px 10px 2px rgba(247, 148, 137, 0.20);
@@ -26,6 +57,11 @@
         background-color: #FAF5F2;
         border-radius: 50%;
         @include flex(center);
+        @include mobile{
+          width: 35px;
+          height: 35px;
+          padding: 5px;
+        }
       }
 
       .cart_title {
@@ -43,9 +79,23 @@
 .title {
   font-size: 36px;
   margin-bottom: 16px;
+  
+  @include laptop{
+    font-size: 32px;
+  }
+  @include tablet{
+    font-size: 30px;
+  }
+  @include mobile{
+    font-size: 24px;
+  }
 }
 
 .more_info {
   color: #F79489;
   text-decoration: none;
+  @include tablet{
+    width: 90%;
+    margin: 0 auto;
+  }
 }
