--- a/styles/sections/_products.scss
+++ b/styles/sections/_products.scss
@@ -1,23 +1,45 @@
 #products {
   margin-bottom: 165px;
+  
+  @include tablet{
+    width: 90%;
+    margin-bottom: 100px;
+  }
 
   .title {
     text-align: center;
-    margin-bottom: 40px
+    margin-bottom: 40px;
+
+    @include mobile{
+      margin-bottom: 20px
+    }
   }
 
   .product_carts {
-    @include flex();
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 20px;
 
+    @include tablet{
+      grid-template-columns: 1fr 1fr;
+    }
+    
     .product_cart {
-      width: 24.5%;
-      @include flex(flex-start, stretch, column);
       text-decoration: none;
+      @include tablet{
+        margin-bottom: 40px;
+      }
 
       .product {
-        padding: 50px 85px;
+        width: 100%;
+        height: 250px;
+        padding: 20px 0;
         background: #F6F6F6;
         margin-bottom: 20px;
+
+        @include mobile{
+          padding: 0 15px;
+        }
       }
 
       .product_category {
