--- a/styles/sections/_sectionOne.scss
+++ b/styles/sections/_sectionOne.scss
@@ -1,20 +1,34 @@
 #section_one {
   width: 100%;
   height: 100vh;
-  background-image: url('../images/back.svg');
+  background: url('../images/back.svg');  
   background-size: cover;
   background-position: bottom;
   margin-bottom: 80px;
   @include flex(flex-start, center);
 
+  @include mobile{
+    margin-bottom: 30px;
+  }
+
   .section_one_title {
     width: 50%;
     margin: 0 auto;
     font-size: 48px;
-    line-height: 72px;
     font-weight: 600;
     text-align: center;
     color: $white;
+    @include laptop{
+      font-size: 32px;
+    }
+    @include tablet{
+      width: 65%;
+      font-size: 30px;
+    }
+    @include mobile{
+      width: 80%;
+      font-size: 24px;
+    }
   }
 
   .text {
@@ -22,16 +36,38 @@
     margin: 40px auto 60px;
     text-align: center;
     color: $white;
+    line-height: 200%;
+    @include tablet{
+      width: 55%;
+      margin: 20px auto 30px;
+    }
+    @include mobile{
+      width: 70%;
+      margin: 20px auto 30px;
+    }
   }
 
   .search {
-    width: 25%;
+    width: 30%;
     margin: 0 auto;
     background-color: rgba(255, 255, 255, 0.5);
     border: 1px solid $white;
     border-radius: 60px;
     padding: 11px 9px 11px 20px;
     @include flex();
+
+    @include laptop{
+      width: 35%;
+      padding: 4px 6px 4px 20px;
+    }
+
+    @include tablet{
+      width: 50%;
+    }
+
+    @include mobile{
+      width: 70%;
+    }
 
     #search {
       width: calc(100% - 38px);
@@ -40,6 +76,10 @@
       background: transparent;
       border: none;
       outline: none;
+
+      @include mobile{
+        font-size: 10px;
+      }
 
       &::placeholder {
         color: $white;
@@ -52,6 +92,10 @@
       border-radius: 50%;
       @include flex(center);
       cursor: pointer;
+
+      @include mobile{
+        padding: 3px;
+      }
 
       span {
         display: flex;
