--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -13,6 +13,7 @@
   position: fixed;
   left: 0;
   right: 0;
+  z-index: 100;
 
   .header {
     width: 100%;
@@ -23,6 +24,10 @@
     @include tablet {
       width: 90%;
       margin: 0 auto;
+    }
+
+    @include mobile {
+      padding: 10px 0;
     }
 
     #logo {
@@ -43,11 +48,47 @@
 
           &:first-child {
             margin-right: 60px;
-            cursor: pointer;
+            position: relative;
 
-            span {
-              display: flex;
-              margin-left: 5px;
+            button {
+              background: none;
+              border: none;
+              outline: none;
+              color: white;
+              cursor: pointer;
+            }
+
+            .dropdown_content {
+              width: 100%;
+              position: absolute;
+              top: 30px;
+              left: 0;
+              background: white;
+              box-shadow: 4px 2px 10px 2px rgba(197, 146, 140, 0.2);
+              border-radius: 4px;
+              height: 0;
+              overflow-y: hidden;
+              transition: .3s;
+
+              @include laptop {
+                width: max-content;
+              }
+
+              .dropdown_content_li {
+                width: 100%;
+                color: black;
+                padding: 10px;
+                font-size: 14px;
+                cursor: pointer;
+
+                @include laptop {
+                  font-size: 12px;
+                }
+
+                &:hover {
+                  color: #F79489;
+                }
+              }
             }
           }
 
@@ -98,6 +139,57 @@
 
         @include tablet {
           display: flex;
+        }
+      }
+
+      .mobile_menu {
+        display: none;
+        position: relative;
+
+        @include tablet {
+          display: block;
+        }
+
+        ul {
+          background-color: white;
+          position: absolute;
+          right: 0;
+          top: 30px;
+          scale: 0;
+          width: 100px;
+          padding: 10px;
+          border-radius: 5px;
+          box-shadow: 4px 2px 10px 2px rgba(197, 146, 140, 0.2);
+          transition: .3s;
+          transform-origin: top right;
+
+          li {
+            padding: 8px 0;
+
+            &:first-child {
+              button {
+                background: none;
+                border: none;
+                outline: none;
+              }
+
+              .dropdown_content_menu {
+                height: 0;
+                transition: .3s;
+                overflow: hidden;
+
+                div {
+                  margin: 5px 0 5px 5px;
+                }
+              }
+            }
+
+            list-style: none;
+
+            a {
+              text-decoration: none;
+            }
+          }
         }
       }
     }
