--- a/styles/config/_mixins.scss
+++ b/styles/config/_mixins.scss
@@ -49,3 +49,36 @@
     align-items: $aligin;
     flex-direction: $direction;
 }
+
+button{
+    outline: none;
+    border: none;
+    background: none;
+}
+a{
+    text-decoration: none;
+}
+li{
+    list-style: none;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    border-radius: 10px;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(247, 148, 137); 
+    border-radius: 10px;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(247, 148, 137) 
+  }
