--- a/styles/sections/_contact.scss
+++ b/styles/sections/_contact.scss
@@ -3,28 +3,44 @@
   flex-wrap: wrap;
   margin-bottom: 200px;
 
-  @include tablet{
+  @include tablet {
     margin-bottom: 100px;
   }
 
   .contact_left {
     width: 47%;
+    position: relative;
 
-    @include tablet{
+    @include tablet {
       width: 90%;
       margin: 0 auto 40px;
     }
 
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: rgba(51, 51, 51, 0.3);
+      width: 100%;
+      height: 100%;
+      border-radius: 0 60px 60px 60px;
+    }
+
     .contact {
       width: 100%;
+      height: 100%;
+      object-fit: cover;
       border-radius: 0 60px 60px 60px;
+      display: flex;
     }
   }
 
   .contact_right {
     width: 47%;
 
-    @include tablet{
+    @include tablet {
       width: 90%;
       margin: 0 auto;
     }
@@ -46,19 +62,18 @@
     .input {
       width: 60%;
       @include flex();
-      padding: 8px 8px 8px 20px;
       border: 1px solid #FADCD9;
       background: #FEFCFB;
       border-radius: 30px;
+      transition: .3s;
+      padding-right: 6px;
 
-      @include tablet{
-        padding: 3px 5px 3px 15px;
-      }
-      @include mobile{
+      @include mobile {
         width: 75%;
       }
 
       input {
+        padding: 12px 10px 12px 15px;
         width: 100%;
         font-size: 14px;
         background-color: transparent;
