--- a/styles/sections/_sectionOne.scss
+++ b/styles/sections/_sectionOne.scss
@@ -1,14 +1,57 @@
+// background-image: linear-gradient(rgba(51, 51, 51, 0.5),rgba(51, 51, 51, 0.5)) , url('../images/back.svg');
 #section_one {
   width: 100%;
   height: 100vh;
-  background: url('../images/back.svg');  
-  background-size: cover;
-  background-position: bottom;
   margin-bottom: 80px;
+  position: relative;
   @include flex(flex-start, center);
 
-  @include mobile{
+  @include mobile {
     margin-bottom: 30px;
+  }
+
+  .back_image_con {
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(51, 51, 51, 0.5);
+      top: 0;
+      left: 0;
+      z-index: -1;
+    }
+  }
+
+  .back_image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    z-index: -2;
+  }
+
+  .splide {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+
+    .splide__track {
+      height: 100vh;
+
+      ul {
+        height: 100vh;
+      }
+    }
+
+    .splide__pagination {
+      padding-bottom: 40px;
+    }
   }
 
   .section_one_title {
@@ -18,14 +61,17 @@
     font-weight: 600;
     text-align: center;
     color: $white;
-    @include laptop{
+
+    @include laptop {
       font-size: 32px;
     }
-    @include tablet{
+
+    @include tablet {
       width: 65%;
       font-size: 30px;
     }
-    @include mobile{
+
+    @include mobile {
       width: 80%;
       font-size: 24px;
     }
@@ -37,11 +83,13 @@
     text-align: center;
     color: $white;
     line-height: 200%;
-    @include tablet{
+
+    @include tablet {
       width: 55%;
       margin: 20px auto 30px;
     }
-    @include mobile{
+
+    @include mobile {
       width: 70%;
       margin: 20px auto 30px;
     }
@@ -56,16 +104,16 @@
     padding: 11px 9px 11px 20px;
     @include flex();
 
-    @include laptop{
+    @include laptop {
       width: 35%;
       padding: 4px 6px 4px 20px;
     }
 
-    @include tablet{
+    @include tablet {
       width: 50%;
     }
 
-    @include mobile{
+    @include mobile {
       width: 70%;
     }
 
@@ -77,7 +125,7 @@
       border: none;
       outline: none;
 
-      @include mobile{
+      @include mobile {
         font-size: 10px;
       }
 
@@ -93,7 +141,7 @@
       @include flex(center);
       cursor: pointer;
 
-      @include mobile{
+      @include mobile {
         padding: 3px;
       }
 
