--- a/styles/sections/_ideas.scss
+++ b/styles/sections/_ideas.scss
@@ -63,6 +63,7 @@
           span {
             display: flex;
             cursor: pointer;
+            padding: 5px;
 
             svg:last-child {
               display: none;
